--- a/newsolutions.ipynb
+++ b/newsolutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "REBUILD=False"
+    "REBUILD=True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,12 @@
     "    sols=[]\n",
     "    newl=[]\n",
     "    rptd=[]\n",
+    "    step=len(l)//10\n",
+    "    istep=0\n",
     "    for dd in l:\n",
+    "        istep=istep+1\n",
+    "        if istep%step==0:\n",
+    "            print('+',end='')\n",
     "        if DEBUG: print('dd →',dd)\n",
     "        if dd['z'] not in sols:\n",
     "            newl.append(dd)\n",
@@ -121,6 +126,7 @@
     "            if dmin and irptd>-1:\n",
     "                #Replace with solution with minimum 'gcd'\n",
     "                newl[irptd]=dmin\n",
+    "    print('.')\n",
     "    return newl,sols\n",
     "\n",
     "class solutions(object):\n",
@@ -206,19 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting run.py\n"
+      "++++++++++.\n",
+      "5.441684007644653\n"
      ]
     }
    ],
    "source": [
-    "%%writefile run.py\n",
+    "#%%writefile run.py\n",
     "#!/usr/bin/evn python3\n",
     "## See anomalysolutions-class.ipynb for details\n",
     "#from solutions import *\n",
@@ -236,16 +243,68 @@
     "#warnings.filterwarnings(\"ignore\")\n",
     "s=solutions.solutions(parallel=True,n_jobs=5)\n",
     "st=time.time()\n",
-    "n=9\n",
-    "#l=s(n,verbose=True,print_step=500000, nmin=-10,nmax=10,zmax=32,,max_size=900000000) #6\n",
+    "n=6\n",
+    "l=s(n,verbose=True,print_step=500000, nmin=-10,nmax=10,zmax=32,max_size=900000000) #6\n",
     "#l =s(n,verbose=True,print_step=500000,nmin=-10,nmax=10,zmax=32,max_size= 900000000) #7\n",
-    "#l =s(n,verbose=True,print_step=500000,nmin=-15,nmax=15,zmax=32,max_size=900000000) #8\n",
-    "l =s(n,verbose=True,print_step=1000000,nmin=-9,nmax=9,zmax=32,max_size=900000000) #9\n",
+    "#l =s(n,verbose=True,print_step=500000,nmin=-15,nmax=15,zmax=32,max_size=900000000)  #8\n",
+    "#l =s(n,verbose=True,print_step=1000000,nmin=-9,nmax=9,zmax=32,max_size=900000000)   #9  →  893 871 739\n",
+    "#l =s(n,verbose=True,print_step=1000000,nmin=-7,nmax=7,zmax=32,max_size=900000000)   #10 → 2562 890 625\n",
+    "#l =s(n,verbose=True,print_step=1000000,nmin=-5,nmax=5,zmax=32,max_size=900000000)    #11 → 2357 947 691\n",
+    "#l =s(n,verbose=True,print_step=1000000,nmin=-4,nmax=4,zmax=32,max_size=900000000)    #11 → 3486 784 401\n",
     "print(time.time()-st)\n",
     "l=[d for d in l if d]\n",
     "df=pd.DataFrame(l)\n",
     "df['strz']=df['z'].astype(str)\n",
     "df.drop_duplicates('strz').drop('strz',axis='columns').reset_index(drop=True).to_json('s{}.json'.format(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step=10068//10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0%step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3486784401"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(s.ls)*len(s.ks)"
    ]
   },
   {
@@ -8142,7 +8201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8177,7 +8236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -9221,7 +9280,7 @@
        "34     False  1      "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9448,11 +9507,219 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Fast analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31211, 5)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df=pd.read_json('https://github.com/restrepo/anomaly/raw/main/solutions.json')\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>l</th>\n",
+       "      <th>k</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>n</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[-1, 1]</td>\n",
+       "      <td>[-1, 0, -1]</td>\n",
+       "      <td>[1, 2, 2, -3, -3, -3, 4]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[-1, 1, 0]</td>\n",
+       "      <td>[-2, -1, 0, -1]</td>\n",
+       "      <td>[1, -5, -5, 9, -13, 14, 18, -19]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[1, -1, 0]</td>\n",
+       "      <td>[-2, -1, -2, -1]</td>\n",
+       "      <td>[3, 3, -6, -7, 10, 13, -19, -20, 23]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[1, -1, 1]</td>\n",
+       "      <td>[-2, 0, -2, -1]</td>\n",
+       "      <td>[1, -7, 9, 9, 9, -11, -11, -16, 17]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[1, 0, -1]</td>\n",
+       "      <td>[-2, -1, -2, 0]</td>\n",
+       "      <td>[1, 4, 5, 8, -9, -10, -18, 19]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31206</th>\n",
+       "      <td>[-3, -15, -6]</td>\n",
+       "      <td>[-3, 8, 9]</td>\n",
+       "      <td>[8, -9, -9, 11, 25, -29, -29, 32]</td>\n",
+       "      <td>36</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31207</th>\n",
+       "      <td>[-10, -5, -15]</td>\n",
+       "      <td>[-10, -12, 12]</td>\n",
+       "      <td>[5, 5, 5, -17, -27, -27, 28, 28]</td>\n",
+       "      <td>100</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31208</th>\n",
+       "      <td>[15, -1, 15]</td>\n",
+       "      <td>[-14, -13, -14]</td>\n",
+       "      <td>[14, -15, -16, 17, -30, 31, 31, -32]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31209</th>\n",
+       "      <td>[-15, -9, -1]</td>\n",
+       "      <td>[-13, -14, -12]</td>\n",
+       "      <td>[11, -13, -15, 19, 23, -26, -30, 31]</td>\n",
+       "      <td>18</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31210</th>\n",
+       "      <td>[10, 15, 5]</td>\n",
+       "      <td>[-11, -14, 7]</td>\n",
+       "      <td>[16, -17, -17, 19, 20, -22, -22, 23]</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>31211 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    l                 k                              solution  \\\n",
+       "0             [-1, 1]       [-1, 0, -1]              [1, 2, 2, -3, -3, -3, 4]   \n",
+       "1          [-1, 1, 0]   [-2, -1, 0, -1]      [1, -5, -5, 9, -13, 14, 18, -19]   \n",
+       "2          [1, -1, 0]  [-2, -1, -2, -1]  [3, 3, -6, -7, 10, 13, -19, -20, 23]   \n",
+       "3          [1, -1, 1]   [-2, 0, -2, -1]   [1, -7, 9, 9, 9, -11, -11, -16, 17]   \n",
+       "4          [1, 0, -1]   [-2, -1, -2, 0]        [1, 4, 5, 8, -9, -10, -18, 19]   \n",
+       "...               ...               ...                                   ...   \n",
+       "31206   [-3, -15, -6]        [-3, 8, 9]     [8, -9, -9, 11, 25, -29, -29, 32]   \n",
+       "31207  [-10, -5, -15]    [-10, -12, 12]      [5, 5, 5, -17, -27, -27, 28, 28]   \n",
+       "31208    [15, -1, 15]   [-14, -13, -14]  [14, -15, -16, 17, -30, 31, 31, -32]   \n",
+       "31209   [-15, -9, -1]   [-13, -14, -12]  [11, -13, -15, 19, 23, -26, -30, 31]   \n",
+       "31210     [10, 15, 5]     [-11, -14, 7]  [16, -17, -17, 19, 20, -22, -22, 23]   \n",
+       "\n",
+       "        gcd  n  \n",
+       "0         1  7  \n",
+       "1         1  8  \n",
+       "2         1  9  \n",
+       "3         2  9  \n",
+       "4         1  8  \n",
+       "...     ... ..  \n",
+       "31206    36  8  \n",
+       "31207   100  8  \n",
+       "31208     1  8  \n",
+       "31209    18  8  \n",
+       "31210  2000  8  \n",
+       "\n",
+       "[31211 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1>=2"
+   ]
   },
   {
    "cell_type": "code",
