--- a/newsolutions.ipynb
+++ b/newsolutions.ipynb
@@ -212,20 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "++++++++++.\n",
-      "5.441684007644653\n"
+      "Overwriting run.py\n"
      ]
     }
    ],
    "source": [
-    "#%%writefile run.py\n",
+    "%%writefile run.py\n",
     "#!/usr/bin/evn python3\n",
     "## See anomalysolutions-class.ipynb for details\n",
     "#from solutions import *\n",
