--- a/newsolutions.ipynb
+++ b/newsolutions.ipynb
@@ -9722,10 +9722,217 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=r'BEHAVIOUR OF HIGH TEMPERATURA PHASES OF THE POLYMERIC SYSTEM PVOH+ NAH 2 PO 4+ H 2 OY GARCíA, O ARNACHE, W SALDARRIAGA, VH ZAPATAREVISTA COLOMBIANA DE FISICA 45 (2), 172-176, 2013'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "author=r'[A-Z]{1,3}\\s[a-zA-Z\\-\\s]+', \n",
+    "authorc=r'[A-Z]{1,3}\\s[a-zA-Z\\-\\s]+,\\s'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BEHAVIOUR OF HIGH TEMPERATURA PHASES OF THE POLYMERIC SYSTEM PVOH+ NAH 2 PO 4+ H 2 OY GARCíA, ',\n",
+       " '',\n",
+       " 'VH ZAPATAREVISTA COLOMBIANA DE FISICA 45 (2), 172-176, 2013']"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=re.split(authorc,s,flags=re.UNICODE)\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function split in module re:\n",
+      "\n",
+      "split(pattern, string, maxsplit=0, flags=0)\n",
+      "    Split the source string by the occurrences of the pattern,\n",
+      "    returning a list containing the resulting substrings.  If\n",
+      "    capturing parentheses are used in pattern, then the text of all\n",
+      "    groups in the pattern are also returned as part of the resulting\n",
+      "    list.  If maxsplit is nonzero, at most maxsplit splits occur,\n",
+      "    and the remainder of the string is returned as the final element\n",
+      "    of the list.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help( re.split )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['jfjfjf ab amcass, ob kojfgg']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.compile(authorc,re.UNICODE).split('jfjfjf ab amcass, ob kojfgg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m Compile a regular expression pattern, returning a Pattern object.\n",
+       "\u001b[0;31mFile:\u001b[0m      /usr/lib/python3.7/re.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "re.compile?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mType:\u001b[0m        RegexFlag\n",
+       "\u001b[0;31mString form:\u001b[0m RegexFlag.UNICODE\n",
+       "\u001b[0;31mFile:\u001b[0m        /usr/lib/python3.7/re.py\n",
+       "\u001b[0;31mDocstring:\u001b[0m   An enumeration.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "re.UNICODE?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'titlecase'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-3c2dc019930f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtitlecase\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtitlecase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtitlecase\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'i am a foobar bazbar'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'titlecase'"
+     ]
+    }
+   ],
+   "source": [
+    ">>> from titlecase import titlecase\n",
+    ">>> titlecase('i am a foobar bazbar')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<RegexFlag.UNICODE: 32>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.UNICODE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Facultad de Ciencias Exactas y Naturales'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ">>> s='Facultad de ciencias exactas y naturales'\n",
+    ">>> re.sub('(\\s[A-Za-z]{1,3}\\s)',lambda m: m.group(0).lower(),s.title(),re.UNICODE)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lambda m: m.group(0).lower()"
+   ]
   }
  ],
  "metadata": {
