--- a/DiracSeesaw_Tree_level-II.ipynb
+++ b/DiracSeesaw_Tree_level-II.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chiral solutions for Type-I Dirac seesaw"
+    "# Chiral solutions for Type-II Dirac seesaw"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,52 +185,42 @@
     "\n",
     "def tree_level_ii(ll):\n",
     "    '''\n",
-    "    Given a solution find set of repeated charges and assign to `l` and `ν`, e.g\n",
-    "       ll=[l,l,...,ν,ν,...]\n",
-    "    For each combination of repeated sets calculates:\n",
-    "       m=2l+ν\n",
-    "    If `m ≠ l ≠ ν` in ll, returns a `N → N+4` solution\n",
-    "       [m,m,m,-m-m,l,l,...,ν,ν,...]\n",
-    "    else, returns a `N → N+6` solution\n",
-    "       [m,m,m,-m,-m,-m,l,l,...,ν,ν,...]\n",
+    "    At least a triplet and a doublet is guaranteed\n",
+    "    (m,m,m,...,ν,ν,...)\n",
     "    '''\n",
-    "    ms=[]\n",
-    "    rp=[]\n",
+    "    fs=[]\n",
+    "    mrp=[]\n",
+    "    νrp=[]\n",
     "    for x in ll:\n",
     "        if ll.count(x)==1:\n",
-    "            ms.append(x)\n",
-    "        elif ll.count(x)>1:\n",
-    "            rp.append(x)\n",
-    "    rp=sorted(np.unique(rp))\n",
-    "    #print(rp,isinstance(rp,list))\n",
-    "    #Two or more repeated sets\n",
+    "            fs.append(x)\n",
+    "        elif ll.count(x)==3:\n",
+    "            mrp.append(x)\n",
+    "        elif ll.count(x)>3:\n",
+    "            mrp.append(x)\n",
+    "            fs.append(x)\n",
+    "        elif ll.count(x)==2:\n",
+    "            νrp.append(x)\n",
+    "    mrp=sorted(np.unique(mrp))\n",
+    "    νrp=sorted(np.unique(νrp))\n",
+    "    fs=sorted(np.unique(fs))\n",
+    "    #print(len(mrp),len(νrp),ll)\n",
     "    sltn=[]\n",
-    "    if len(rp)>=2 and 3 in rp:\n",
-    "        rps=[k  for k  in itertools.combinations(rp,2)]\n",
-    "        #print('rps1',rps)\n",
-    "        rps=rps+[tuple(reversed(k)) for k  in rps]\n",
-    "        #print('rps2',rps)\n",
-    "        for r in rps:\n",
-    "            #Loop on combinatories here, break whit the first solution\n",
-    "            l=r[0]\n",
-    "            ν=r[1]\n",
-    "            m=2*l+ν\n",
-    "            s=l-m\n",
-    "            massless=ms.copy()\n",
-    "            massless=massless+[x for x in rp if x not in r and x not in massless]\n",
-    "            #print('ini massless',massless)\n",
-    "            if m in ll and m not in rp:\n",
-    "                massless.remove(m)\n",
-    "                #Check Dirac and Majorana\n",
-    "                massless=extract_Dirac_and_Majorana(massless,s)\n",
-    "                slt={'[l,ν,s,m_in,m_out]':[l,ν,s,m,0],'massless':massless}\n",
-    "            else:\n",
-    "                slt={'[l,ν,s,m_in,m_out]':[l,ν,s,0,m],'massless':massless}\n",
-    "                \n",
+    "    for m in mrp:\n",
+    "        for ν in νrp:\n",
+    "            #if (mrp[0]+ν in [sum(k)  for k  in itertools.combinations(fs,2)]+list(2*np.array(fs))):\n",
+    "            s=m+ν# ,fs,[sum(k)  for k  in itertools.combinations(fs,2)],list(2*np.array(fs)))\n",
+    "            nom=mrp.copy()\n",
+    "            kk=nom.remove(m)\n",
+    "            noν=νrp.copy()\n",
+    "            kk=noν.remove(ν)\n",
+    "            massless=fs+nom+noν\n",
+    "            massless=extract_Dirac_and_Majorana(massless,s)\n",
+    "            slt={'[m,ν,s]':[m,ν,s],'massless':massless}\n",
     "            if len(massless)>0:\n",
     "                slt['sp'],slt['sp_massless']=best_higgs_singlet(massless)\n",
     "            else:\n",
-    "                slt['sp'],slt['sp_massless']=(None,None)\n",
+    "                slt['sp'],slt['sp_massless']=(None,None)            \n",
     "            sltn.append(slt)\n",
     "    return sltn\n",
     "\n",
@@ -249,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -414,62 +404,13 @@
        "[552 rows x 5 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tree_level_ii(ll):\n",
-    "    '''\n",
-    "    At least a triplet and a doublet is guaranteed\n",
-    "    (m,m,m,...,ν,ν,...)\n",
-    "    '''\n",
-    "    fs=[]\n",
-    "    mrp=[]\n",
-    "    νrp=[]\n",
-    "    for x in ll:\n",
-    "        if ll.count(x)==1:\n",
-    "            fs.append(x)\n",
-    "        elif ll.count(x)==3:\n",
-    "            mrp.append(x)\n",
-    "        elif ll.count(x)>3:\n",
-    "            mrp.append(x)\n",
-    "            fs.append(x)\n",
-    "        elif ll.count(x)==2:\n",
-    "            νrp.append(x)\n",
-    "    mrp=sorted(np.unique(mrp))\n",
-    "    νrp=sorted(np.unique(νrp))\n",
-    "    fs=sorted(np.unique(fs))\n",
-    "    #print(len(mrp),len(νrp),ll)\n",
-    "    sltn=[]\n",
-    "    for m in mrp:\n",
-    "        for ν in νrp:\n",
-    "            #if (mrp[0]+ν in [sum(k)  for k  in itertools.combinations(fs,2)]+list(2*np.array(fs))):\n",
-    "            s=m+ν# ,fs,[sum(k)  for k  in itertools.combinations(fs,2)],list(2*np.array(fs)))\n",
-    "            nom=mrp.copy()\n",
-    "            kk=nom.remove(m)\n",
-    "            noν=νrp.copy()\n",
-    "            kk=noν.remove(ν)\n",
-    "            massless=fs+nom+noν\n",
-    "            massless=extract_Dirac_and_Majorana(massless,s)\n",
-    "            slt={'[m,ν,s]':[m,ν,s],'massless':massless}\n",
-    "            if len(massless)>0:\n",
-    "                slt['sp'],slt['sp_massless']=best_higgs_singlet(massless)\n",
-    "            else:\n",
-    "                slt['sp'],slt['sp_massless']=(None,None)            \n",
-    "            sltn.append(slt)\n",
-    "    return sltn\n",
-    "                "
    ]
   },
   {
@@ -481,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +611,7 @@
        "[552 rows x 6 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +688,7 @@
        "0     5  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +912,7 @@
        "[123 rows x 7 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1100,7 @@
        "91    25     0.0   2.0  0.0  2.0  0.0  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1260,7 @@
        "0     5      10     2   0   2   0       1  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1307,7 @@
        "0"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1501,7 @@
        "5    23      10     2   0   2   0       3  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1691,7 @@
        "5    2  -6   9  3            []  None      10     2   0   2   0       0  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1933,7 @@
        "5   12  15 -16 -1      [9, -11]     2       2     3   0   2   0      10  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2028,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2164,7 @@
        "5     [1, 2, -6, -6, -6, 8, 9, 9, -11]    2  -6   9  3            []  None  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2231,13 +2172,6 @@
    "source": [
     "kkk"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
