--- a/DiracSeesaw_Tree_level-II.ipynb
+++ b/DiracSeesaw_Tree_level-II.ipynb
@@ -2172,6 +2172,33 @@
    "source": [
     "kkk"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Liliam Cardeño Acero'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'LILIAM CARDEÑO ACERO'.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
